--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
